--- a/srcs/requirements/mariadb/50-server.cnf
+++ b/srcs/requirements/mariadb/50-server.cnf
@@ -14,7 +14,7 @@ init_file = /etc/mysql/init.sql
 # * Basic Settings
 #
 
-root                    = mysql
+user                    = root
 pid-file                = /run/mysqld/mysqld.pid
 basedir                 = /usr
 datadir                 = /var/lib/mysql
