--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -10,8 +10,7 @@ services:
     ports:
       - "443:443"
     volumes:
-      - /home/osboxes/data/web:/var/www/html
-      # - web:/var/www/html
+      - web:/var/www/html
     env_file :
       - .env
     networks:
@@ -24,8 +23,7 @@ services:
     depends_on:
       - mariadb
     volumes:
-      - /home/osboxes/data/web:/var/www/html
-      # - web:/var/www/html
+      - web:/var/www/html
     env_file :
       - .env
     networks:
@@ -36,18 +34,28 @@ services:
     build: ./requirements/mariadb/
     container_name: mariadb
     volumes:
-      - /home/osboxes/data/db_files:/var/lib/mysql
-      # - db_files:/var/lib/mysql
+      - db_files:/var/lib/mysql
     env_file :
       - .env
     networks:
       - inception_net
     restart: always
 
-# need to delete them on production with bind mounts
-# volumes:
-#   db_files:
-#   web:
+volumes:
+  db_files:
+    name: db_files
+    driver: local
+    driver_opts:
+      device: /home/data/db_files
+      o: bind
+      type: none
+  web:
+    name: web
+    driver: local
+    driver_opts:
+      device: /home/data/web
+      o: bind
+      type: none
 
 networks:
   inception_net:
