fix: switch from latest to bullseye version of debian, add image names, replace bind mount with named volumes

--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,10 +1,15 @@
-FROM debian:bookworm
+FROM debian:bullseye
 
 RUN apt-get update && apt-get upgrade -y
 
-RUN apt-get install -y php8.2-fpm curl php-mysqli
+RUN apt-get install -y php php7.4-fpm curl php-mysqli
 
-COPY www.conf /etc/php/8.2/fpm/pool.d/.
+RUN apt-get install -y php-gd wget
+RUN mkdir -p /var/www/html /run/php
+RUN chown -R www-data:www-data /var/www/html
+RUN chown -R www-data:www-data /run/php
+
+COPY www.conf /etc/php/7.4/fpm/pool.d/.
 
 COPY script.sh .
 
