--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   nginx:
     build: ./requirements/nginx/
     container_name: nginx
+    image: nginx
     depends_on:
       - wordpress
     ports:
@@ -17,6 +18,7 @@ services:
   wordpress:
     build: ./requirements/wordpress/
     container_name: wordpress
+    image: wordpress
     depends_on:
       - mariadb
     volumes:
@@ -30,6 +32,7 @@ services:
   mariadb:
     build: ./requirements/mariadb/
     container_name: mariadb
+    image: mariadb
     volumes:
       - db_files:/var/lib/mysql
     env_file :
